fixed img en donaciones refugios

--- a/dona_front/src/pages/Donadores/DonacionesRest/DonacionesRest.css
+++ b/dona_front/src/pages/Donadores/DonacionesRest/DonacionesRest.css
@@ -1,4 +1,5 @@
 /* Luna Flores Yamileth Guadalupe */
+/* DonacionesRest.css */
 .container.historialDonador {
   max-width: 1200px;
   margin: 2rem auto;
